--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/cli": "^18.0.1",
     "@angular/compiler-cli": "^18.0.0",
     "@eslint/js": "^9.20.0",
+    "@ngrx/eslint-plugin": "^19.0.1",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
