--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store": "^18.1.1",
     "@ngrx/store-devtools": "^18.1.1",
     "eslint": "^8.57.1",
+    "ngrx-store-localstorage": "^18.0.0",
     "prettier": "^3.5.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.17",
