--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@ngrx/component-store": "^18.1.1",
     "@ngrx/effects": "^18.1.1",
     "@ngrx/router-store": "^18.1.1",
     "@ngrx/store": "^18.1.1",
