--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngrx-store-localstorage": "^18.0.0",
     "prettier": "^3.5.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
