--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ngrx/store": "^18.1.1",
     "@ngrx/store-devtools": "^18.1.1",
     "eslint": "^8.57.1",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-jasmine": "^5.1.0",
     "ngrx-store-localstorage": "^18.0.0",
     "prettier": "^3.5.1",
     "rxjs": "~7.8.0",
@@ -35,7 +37,7 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.1",
+    "@angular-devkit/build-angular": "^18.2.15",
     "@angular/cli": "^18.0.1",
     "@angular/compiler-cli": "^18.0.0",
     "@eslint/js": "^9.20.0",
@@ -48,11 +50,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "globals": "^15.15.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2",
     "typescript-eslint": "^8.24.0"
